# process-magic

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DESIGN.md
examples/: .gitignore  Makefile  another_tty.c  countforever.c  execve.c  mmap.c  obliterate.c  oblivion.c  prochelper.py  risen.c  simple_malloc.c  splitpoem.c  takeover.c  waitforinput.c  writetty.c
src/: lib.rs
src/common/: httpapi.rs  mod.rs
src/proctool/: cryogenics.rs  mod.rs  pcontroller.rs  procinfo.rs  terminals.rs
src/teleclient/: mod.rs  myprocfs.rs  procfs.rs  ptrace.rs
src/teleserver/: spawn.rs
