[package]
name = "telefork"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
libc = "0.2.155"
nix = { version = "0.29.0", features = ["ptrace", "signal"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
syscalls = "0.6.18"

[[bin]]
name = "teleserver"
path = "src/teleserver/bin/main.rs"

[[bin]]
name = "teleclient"
path = "src/teleclient/bin/main.rs"
