[package]
name = "telefork"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
libc = "0.2.155"
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["file_appender"] }
nix = { version = "0.29.0", features = ["fs", "process", "ptrace", "resource", "signal", "uio", "user"] }
procfs = "0.16.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.121"
syscalls = "0.6.18"

[[bin]]
name = "teleserver"
path = "src/teleserver/bin/main.rs"

[[bin]]
name = "teleclient"
path = "src/teleclient/bin/main.rs"

[[bin]]
name = "proctool"
path = "src/proctool/bin/client.rs"

[[bin]]
name = "proctool-daemon"
path = "src/proctool/bin/daemon.rs"
